--- a/1. HTML-верстка/_D_/index.css
+++ b/1. HTML-верстка/_D_/index.css
@@ -6,6 +6,12 @@
 общий бэкграунд - f8eedf (светло-бежевый) - opacity 100
 header-нижний слой - 000000 (черный) - opacity 100
 header-шум - разноцветный шум (noise.jpg) - opacity 5
+deccaa - бежевый
+40312a - коричневый
+febf5d - оранжевый
+
+125*95 - размер миниатюр Our Recent Projects
+Welcome to our site - под картинками есть тени
 */
 
 * {
