--- a/1. HTML-верстка/_D_/index.css
+++ b/1. HTML-верстка/_D_/index.css
@@ -32,7 +32,7 @@ header {
 #header-block1 {
   position: relative;
   height: 100px;
-  background-color: orange;
+  background-color: #febf5d;
   #margin-top: -19px;
 }
 
@@ -87,7 +87,7 @@ header {
 #header-block2 {
   position: relative;
   height: 59px;
-  background-color: green;
+  background-color: #40312a;
   padding-top: 3px;
 }
 
@@ -147,11 +147,11 @@ header {
 	width: 203px;
 	#display: block;
 	padding-right: 30px;
-  padding-left: 25px;
+  padding-left: 5px;
   padding-top: 5px;
 	#border: 1px solid #333;
 	#box-sizing: border-box;
-	text-indent: 10px;
+	#text-indent: 10px;
 	position: relative;
 	z-index: 5;
 }
@@ -192,11 +192,25 @@ header {
 #loupe {
   background-image: url("pics/mg_glass.png");
   background-size: cover;
-  width: 24px;
+  width: 23px;
   height: 20px;
+  margin-right: 5px;
 }
 
-di#v#pix {
+
+
+
+
+
+
+
+
+
+
+
+
+
+div#pix {
 	background-image: url(maket/06-psd.jpg);
 	background-size: 100% 100%;
 	position: absolute;
