--- a/1. HTML-верстка/_D_/index.css
+++ b/1. HTML-верстка/_D_/index.css
@@ -20,7 +20,7 @@ Welcome to our site - под картинками есть тени
 
 body {
 	background: #f8eedf;
-  width: 1080px;
+  max-width: 1080px;
   margin: 0 auto;
 }
 
@@ -281,12 +281,14 @@ main:after{
   #background-color: #f8eedf;
   background-color: grey;
   #height: 403px;
-  margin: 0 auto;
+  #margin: 0 auto;
   #width: 100%;
-  width: auto;
+  #width: auto;
+  width: 100vw;
   padding-bottom: 100px;
   #right: 0;
   min-height: 400px;
+  max-width: 1080px;
 }
 
 #main-block1 div {
@@ -362,7 +364,7 @@ main:after{
   position: relative;
   top: 47px;
   background-color: blue;
-  #width: 95%;
+
   max-width: 1006px;
   height: 53px;
   margin: 0 auto;
@@ -371,7 +373,6 @@ main:after{
   letter-spacing: 1.2px;
   color: white;
   padding: 10px 0px 0px 42px;
-
   z-index: 1;
 }
 
@@ -383,7 +384,8 @@ main:after{
   height: 250px;
   z-index: 5;
   background-color: white;
-  #background-size: cover;
+  background-size: cover;
+  margin-left: 500px;
 }
 #abstract {
   position:absolute;
@@ -393,7 +395,7 @@ main:after{
   height: 220;
   z-index: 4;
   background-color: white;
-  #background-size: cover;
+  background-size: cover;
 }
 
 /*=============MAIN-BLOCK2=================*/
@@ -406,10 +408,12 @@ main:after{
 /*======MAIN-BLOCK2-DIV1=====*/
 #main-block2-div1 {
   #background-color: green;
-  display: inline-block;
+  position: relative;
+  #display: inline-block;
   width: 62.3%;
   float: left;
   min-width: 410px;
+  #margin-right: 10px;
 }
 
 #main-block2-div1 * {
@@ -457,7 +461,7 @@ main:after{
 }
 
 .blog-img {
-  width: 580px;
+  max-width: 580px;
   height: 138px;
   background-size: cover;
   margin: -12px 0 0 37px;
@@ -490,13 +494,132 @@ main:after{
   color: red;
 }
 
+#main-block2-div1>div {
+  position: absolute;
+  bottom: -27px;
+  right: 54px;
+  #margin-top: -23px;
+  padding: 5px 0px 0px 0px;
+  #font: 9pt "Montserrat", sans-serif;
+  width: 116px;
+  height: 30px;
+  font: 14pt "Yrsa", serif;
+  font-weight: 500;
+  letter-spacing: 0.8px;
+  color: white;
+  background-color: #40312a;
+  text-align: center;
+}
+
 /*======MAIN-BLOCK2-DIV2=====*/
 #main-block2-div2 {
   #background-color: yellow;
   display: inline-block;
   width: 37.7%;
   #min-width: 350px;
+  z-index: 20;
 }
+
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/* Базовый контейнер табов */
+.tabs {
+	#min-width: 320px;
+	#max-width: 800px;
+	padding: 0px;
+	margin: 0 auto;
+}
+/* Стили секций с содержанием */
+.tabs>section {
+	display: none;
+	padding: 5px;
+	background: #fff;
+	border: 1px solid #ddd;
+}
+.tabs>section>p {
+	margin: 0 0 15px;
+	line-height: 1.5;
+	color: #383838;
+	/* прикрутим анимацию */
+	-webkit-animation-duration: 1s;
+	animation-duration: 1s;
+	-webkit-animation-fill-mode: both;
+	animation-fill-mode: both;
+	-webkit-animation-name: fadeIn;
+	animation-name: fadeIn;
+}
+/* Описываем анимацию свойства opacity */
+
+@-webkit-keyframes fadeIn {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+/* Прячем чекбоксы */
+.tabs>input {
+	display: none;
+	position: absolute;
+}
+/* Стили переключателей вкладок (табов) */
+.tabs>label {
+	display: inline-block;
+	margin: 0 0 -1px;
+	padding: 15px 25px;
+	font-weight: 600;
+	text-align: center;
+	color: white;
+	border: 0px solid #ddd;
+	border-width: 1px 1px 1px 1px;
+	background: brown;
+	border-radius: 3px 3px 0 0;
+}
+/* Шрифт-иконки от Font Awesome в формате Unicode
+.tabs>label:before {
+	font-family: fontawesome;
+	font-weight: normal;
+	margin-right: 10px;
+}
+.tabs>label[for*="1"]:before {
+	content: "\f19a";
+}
+.tabs>label[for*="2"]:before {
+	content: "\f17a";
+}
+.tabs>label[for*="3"]:before {
+	content: "\f13b";
+}
+.tabs>label[for*="4"]:before {
+	content: "\f13c";
+}*/
+/* Изменения стиля переключателей вкладок при наведении */
+
+.tabs>label:hover {
+	color: #888;
+	cursor: pointer;
+}
+/* Стили для активной вкладки */
+.tabs>input:checked+label {
+	color: #555;
+	border-top: 1px solid #009933;
+	border-bottom: 1px solid #fff;
+	background: blue;
+  color: white;
+}
+/* Активация секций с помощью псевдокласса :checked */
+#tab1:checked~#content-tab1, #tab2:checked~#content-tab2, #tab3:checked~#content-tab3, #tab4:checked~#content-tab4 {
+	display: block;
+}
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 
 
 /*================================FOOTER=============================*/
@@ -506,7 +629,7 @@ footer {
 /*=============FOOTER-BLOCK1=================*/
 /*=============FOOTER-BLOCK2=================*/
 
-di#v#pix {
+d#iv#pix {
 	background-image: url(maket/06-psd.jpg);
 	background-size: 100% 100%;
 	position: absolute;
